2008-10-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (event_output_port::insert_event): New method.

2008-09-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.cc (setup::setup): Compile use of MPI::Init_thread
	conditionally.

	* music-c.cc: #include <ctsring>.

2007-11-26  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am (libmusic_la_SOURCES): Added music/spike_data.hh,
	spike_data.cc.

	* spike_data.cc: New file.

2007-11-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/spike_data.hh: New file.

	* music/setup.hh (setup::publish): Removed
	(setup::publish_input, setup::publish_output): New methods.

	* music/array_data.hh, music/data_map.hh, music/index_map.hh,
	music/linear_index.hh: Added copyright notice + #ifdef logic.

	* music/array_data.hh (array_data::array_data): Data type argument
	moved first; added new constructor for linear arrays.

	* Makefile.am: Added music/port.hh, port.cc.

	* music/port.hh, port.cc: New files.

	* music/runtime.hh (runtime::input_ports, runtime::output_ports):
	New members.

2007-11-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* configuration.cc (configuration::configuration): Handle dirct
	launch by mpirun.

	* music/configuration.hh (setup::launched_by_music): New method.

	* music/configuration.hh (setup::_launched_by_music): New private
	member.

	* music/setup.hh, setup.cc (setup::my_communicator): Renamed from
	myCommunicator.

	* parse.cc (parser::parse_string, parser::next_arg): Use int
	instead of char to handle characters.

	* configuration.cc (configuration::configuration,
	configuration::tap): Use int instead of char to handle
	characters.

2007-11-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, music/parse.hh: Don't #include
	<music/application_map.hh>.

	* music/setup.hh: #include <music/configuration.hh>.

2007-11-01  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/error.hh, error.cc: Added.
